--- a/fest/templates/base.html
+++ b/fest/templates/base.html
@@ -84,10 +84,10 @@
               <span class="sitename">TheEvent</span>
             </a>
             <div class="footer-contact pt-3">
-              <p>A108 Adam Street</p>
-              <p>New York, NY 535022</p>
-              <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-              <p><strong>Email:</strong> <span>info@example.com</span></p>
+              <p>Ring Rd</p>
+              <p>Westlands, Nairobi</p>
+              <p class="mt-3"><strong>Phone:</strong> <span>+254 115 890 160</span></p>
+              <p><strong>Email:</strong> <span>info@theevent.com</span></p>
             </div>
           </div>
 
@@ -113,27 +113,27 @@
             </ul>
           </div>
 
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Hic solutasetp</h4>
-            <ul>
-              <li><a href="#">Molestiae accusamus iure</a></li>
-              <li><a href="#">Excepturi dignissimos</a></li>
-              <li><a href="#">Suscipit distinctio</a></li>
-              <li><a href="#">Dilecta</a></li>
-              <li><a href="#">Sit quas consectetur</a></li>
-            </ul>
-          </div>
+<!--          <div class="col-lg-2 col-md-3 footer-links">-->
+<!--            <h4>Hic solutasetp</h4>-->
+<!--            <ul>-->
+<!--              <li><a href="#">Molestiae accusamus iure</a></li>-->
+<!--              <li><a href="#">Excepturi dignissimos</a></li>-->
+<!--              <li><a href="#">Suscipit distinctio</a></li>-->
+<!--              <li><a href="#">Dilecta</a></li>-->
+<!--              <li><a href="#">Sit quas consectetur</a></li>-->
+<!--            </ul>-->
+<!--          </div>-->
 
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Nobis illum</h4>
-            <ul>
-              <li><a href="#">Ipsam</a></li>
-              <li><a href="#">Laudantium dolorum</a></li>
-              <li><a href="#">Dinera</a></li>
-              <li><a href="#">Trodelas</a></li>
-              <li><a href="#">Flexo</a></li>
-            </ul>
-          </div>
+<!--          <div class="col-lg-2 col-md-3 footer-links">-->
+<!--            <h4>Nobis illum</h4>-->
+<!--            <ul>-->
+<!--              <li><a href="#">Ipsam</a></li>-->
+<!--              <li><a href="#">Laudantium dolorum</a></li>-->
+<!--              <li><a href="#">Dinera</a></li>-->
+<!--              <li><a href="#">Trodelas</a></li>-->
+<!--              <li><a href="#">Flexo</a></li>-->
+<!--            </ul>-->
+<!--          </div>-->
 
         </div>
       </div>
@@ -144,14 +144,14 @@
 
         <div class="d-flex flex-column align-items-center align-items-lg-start">
           <div>
-            © Copyright <strong><span>MyWebsite</span></strong>. All Rights Reserved
+            © Copyright <strong><span>The Event</span></strong>. All Rights Reserved
           </div>
           <div class="credits">
             <!-- All the links in the footer should remain intact. -->
             <!-- You can delete the links only if you purchased the pro version. -->
             <!-- Licensing information: https://bootstrapmade.com/license/ -->
             <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+<!--            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>-->
           </div>
         </div>
 
