--- a/fest/templates/buy_ticket.html
+++ b/fest/templates/buy_ticket.html
@@ -11,7 +11,7 @@
         <label for="amount">Amount:</label>
         <input type="number" name="amount" id="amount" class="form-control" required>
 
-        <button type="submit" class="btn btn-primary mt-3">Pay Now</button>
+        <button type="submit"  class="btn btn-primary mt-3"><a href="{% url 'stk_push_request' %}">Pay Now</a></button>
     </form>
 
     <div id="responseMessage" class="mt-3"></div>
